testsuite/tests/qualifieddo/should_fail/qdofail003.stderr

qdofail003.hs:11:5: error:
    Not in scope: ‘P.>>’
    Suggested fix:
      Perhaps you want to remove ‘>>’ from the explicit hiding list
      in the import of ‘Prelude’ (qdofail003.hs:3:1-33).
